<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:vocabnote="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/empty"
        android:icon="@drawable/ic_action_overflow"
        vocabnote:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_sort"
                android:title="@string/str_action_sort"
                android:icon="@drawable/ic_action_sort_by_alpha_48dp"
                vocabnote:showAsAction="never" />
            <item
                android:id="@+id/action_filter"
                android:title="@string/str_action_filter"
                android:icon="@drawable/ic_action_filter_list_48dp"
                vocabnote:showAsAction="never" />

            <item
                android:id="@+id/action_flash_card"
                android:title="@string/str_action_flash_card"
                android:icon="@drawable/ic_action_flash_card_48dp"
                vocabnote:showAsAction="never" />

            <item
                android:id="@+id/action_rename_list"
                android:title="@string/str_action_rename_list"
                android:icon="@drawable/ic_action_edit_48dp"
                vocabnote:showAsAction="never" />

            <item
                android:id="@+id/action_delete_list"
                android:title="@string/str_action_delete_list"
                android:icon="@drawable/ic_action_delete_48dp"
                vocabnote:showAsAction="never" />

            <item
                android:id="@+id/action_backup"
                android:title="@string/str_action_backup"
                android:icon="@drawable/ic_action_backup_48dp"
                vocabnote:showAsAction="never" />

            <item
                android:id="@+id/action_restore"
                android:title="@string/str_action_restore"
                android:icon="@drawable/ic_action_restore_48dp"
                vocabnote:showAsAction="never" />
            <item
                android:id="@+id/action_settings"
                android:title="@string/str_action_settings"
                android:icon="@drawable/ic_action_settings_48dp"
                vocabnote:showAsAction="never" />
        </menu>
    </item>
</menu>